# Client-s_personal_account

./: .flake8  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: .env.example  decorators.py  external_api.py  generators.py  masks.py  open_csv_and_excel.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_open_csv_and_excel.py  test_processing.py  test_utils.py  test_widget.py
