[tool.poetry]
name = "сlient's-personal-account"
version = "0.1.0"
description = ""
authors = ["Egor Petruschenko <jaguar.94@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
openpyxl = "^3.1.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
    | \__pycache__
    | \.idea
    | \.mypy_cache
    | \.venv
  )/
)
'''

[tool.isort]
line_length = 119


[tool.mypy]
warn_return_any = true
exclude = '''
(
  /(
     \.git
    | \__pycache__
    | \.idea
    | \.mypy_cache
    | \.venv
  )/
)
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
